# CancerDetectionMLOps

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py  template.py  trainer_pipeline.py
.github/workflows/: tests.yml
CancerClassification/components/: data_ingestion.py  data_preparation.py  model_builder.py  model_inference.py  model_trainer.py
CancerClassification/config/: configuration.py
CancerClassification/constants/: __init__.py
CancerClassification/entity/: config_entity.py
CancerClassification/pipeline/: stage1_data_ingestion.py  trainer_pipeline.py
CancerClassification/utils/: exception_handler.py  logger.py  utility.py
config/: config.yaml  params.yaml
research/: 2_data_prep.ipynb  2_prepare_base_module.ipynb  3_model_trainer.ipynb
testing/: test_ingestion.py  test_preparation.py
